--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,6 +1,6 @@
 .footer{
   position: relative;
-  margin-top: 2rem;
+  margin-top: 5rem;
   background-color: black;
   align-items: center;
   align-self: center;
